<resources>
    <string name="app_name">Tela login - Quickdeal</string>
    <string name="texto_botao_continuar">Continuar</string>
    <string name="texto_facacadastro">Faça seu Cadastro:</string>
    <string name="texto_nomecompleto">Nome Completo</string>
    <string name="texto_datanascimento">Data de Nascimento</string>
    <string name="texto_email">E-mail</string>
    <string name="texto_senha">Senha</string>
    <string name="texto_cadastrar">Cadastrar</string>
    <string name="texto_botao_naocadastro">Não tenho Cadastro</string>
    <string name="texto_botao_esquecisenha">Esqueci a Senha</string>
    <string name="texto_esqueciSenha">Esqueci minha senha</string>
    <string name="texto_redef">Para redefinir sua senha, informe o e-mail cadastrado na sua conta e lhe enviaremos um link com as instruções.</string>
    <string name="texto_emailUser">Email de usuário:</string>
    <string name="texto_confirmar">Confirmar</string>
    <string name="texto_cancelar">Cancelar</string>
    <string name="buscar">Buscar</string>
    <string name="ativar_geolocalizao">Ativar geolocalização</string>
    <string name="todo">TODO</string>
    <string name="tudo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="digite_aqui">Digite aqui...</string>
    <string name="assis_sp">Assis/SP</string>
    <string name="navbar_inicio">Início</string>
    <string name="navbar_restaurantes">Restaurantes</string>
    <string name="navbar_diversos">Diversos</string>
    <string name="navbar_ofertas">Ofertas</string>
    <string name="str_texto1">Diversas ofertas!</string>
    <string name="str_texto2">A nossa empresa se compromete com a satisfação do cliente!</string>
    <string name="textoimagemcomida">Imagem da comida</string>
    <string name="textoimagemquickdeal">Logo do Quickdeal</string>
    <string name="textoimagemcentro">Imagem do centro</string>
    <string name="texto_nome">Nome:</string>
    <string name="texto_email2">Email:</string>
    <string name="texto_idade">Idade:</string>
    <string name="texto_senha2">Senha:</string>
    <string name="texto_logout">LOGOUT</string>
    <string name="texto_favoritos">Meus favoritos</string>
    <string name="texto_burgerking">Imagem do Burger King</string>
</resources>